@@ -1,3 +1,7 @@
+2010-03-29  Levi Bard  <levi@unity3d.com>
+
+	* SoftDebuggerSession.cs: Improve assembly matching.
+
 2010-03-26  Levi Bard  <levi@unity3d.com>
 
 	* SoftDebuggerSession.cs: Handle assembly unload.
